--- a/ShopDienTu.WebApp/Views/Account/Register.cshtml
+++ b/ShopDienTu.WebApp/Views/Account/Register.cshtml
@@ -2,6 +2,7 @@
 @{
     ViewData["Title"] = "Register";
     Layout = "~/Views/Shared/_Layout.cshtml";
+
 }
 
 <ul class="breadcrumb">
@@ -12,9 +13,13 @@
 <div class="well">
     <form asp-action="Register" asp-controller="Account" method="post" class="form-horizontal">
         <h4>Your personal information</h4>
-        <div asp-validation-summary="All" class="text-error">
-            <button type="button" class="close" data-dismiss="alert">×</button>
-        </div>
+        @if (ViewData.ContainsKey("Error"))
+        {
+            <div class="text-error">
+                @Html.Raw(ViewData["Error"])
+                <button type="button" class="close" data-dismiss="alert">×</button>
+            </div>
+        }
         <div class="control-group">
             <label class="control-label" for="inputFname1">First name <sup>*</sup></label>
             <div class="controls">
@@ -26,12 +31,14 @@
             <label class="control-label" for="inputLnam">Last name <sup>*</sup></label>
             <div class="controls">
                 <input type="text" asp-for="LastName" placeholder="Last Name">
+                <span asp-validation-for="LastName" class="text-error"></span>
             </div>
         </div>
         <div class="control-group">
             <label class="control-label" for="input_email">Date <sup>*</sup></label>
             <div class="controls">
                 <input type="date" asp-for="Dob" placeholder="Email">
+                <span asp-validation-for="Dob" class="text-error"></span>
             </div>
         </div>
         <div class="control-group">
@@ -45,18 +52,21 @@
             <label class="control-label" for="inputPassword1">User Name <sup>*</sup></label>
             <div class="controls">
                 <input type="text" asp-for="UserName" placeholder="User Name">
+                <span asp-validation-for="UserName" class="text-error"></span>
             </div>
         </div>
         <div class="control-group">
             <label class="control-label" for="inputPassword1">Password <sup>*</sup></label>
             <div class="controls">
                 <input type="password" asp-for="Password" placeholder="Password">
+                <span asp-validation-for="Password" class="text-error"></span>
             </div>
         </div>
         <div class="control-group">
             <label class="control-label" for="inputPassword1">Confirm Password <sup>*</sup></label>
             <div class="controls">
                 <input type="password" asp-for="ConfirmPassword" placeholder="Confirm Password">
+                <span asp-validation-for="ConfirmPassword" class="text-error"></span>
             </div>
         </div>
 
@@ -64,6 +74,7 @@
             <label class="control-label" for="mobile">Mobile Phone </label>
             <div class="controls">
                 <input type="text" asp-for="PhoneNumber" placeholder="Mobile Phone" />
+                <span asp-validation-for="PhoneNumber" class="text-error"></span>
             </div>
         </div>
 
