--- a/ShopDienTu.WebApp/Views/Product/Category.cshtml
+++ b/ShopDienTu.WebApp/Views/Product/Category.cshtml
@@ -7,12 +7,12 @@
 }
 
 <ul class="breadcrumb">
-    <li><a href="/">Home</a> <span class="divider">/</span></li>
+    <li><a href="/@culture">Home</a> <span class="divider">/</span></li>
     <li class="active">Products Name</li>
 </ul>
 <h3> @Model.Category.Name <small class="pull-right"> @Model.Products.Items.Count sản phẩm có sẵn </small></h3>
 <hr class="soft" />
-<form class="form-horizontal span6">
+@*<form class="form-horizontal span6">
     <div class="control-group">
         <label class="control-label alignL">Sort By </label>
         <select>
@@ -22,7 +22,7 @@
             <option>Price Lowest first</option>
         </select>
     </div>
-</form>
+</form>*@
 
 <div id="myTab" class="pull-right">
     <a href="#listView" data-toggle="tab"><span class="btn btn-large"><i class="icon-list"></i></span></a>
