--- a/ShopDienTu.WebApp/Views/Shared/Components/SideBar/Default.cshtml
+++ b/ShopDienTu.WebApp/Views/Shared/Components/SideBar/Default.cshtml
@@ -16,7 +16,7 @@
             if (childent.Any())
             {
                 <li class="subMenu open">
-                    <a> @parent.Name</a>
+                    <a href="/@culture/@_loc["categoryUrl"]/@parent.Id/@parent.SeoAlias"> @parent.Name</a>
                     <ul>
                         @foreach (var item in childent)
                         {
