--- a/ShopDienTu.Admin/Views/Shared/_Layout.cshtml
+++ b/ShopDienTu.Admin/Views/Shared/_Layout.cshtml
@@ -199,6 +199,7 @@
     <script src="/assets/dist/js/adminlte.min.js"></script>
     <!-- AdminLTE for demo purposes -->
     <script src="/assets/dist/js/demo.js"></script>
+    <partial name="_ValidationScriptsPartial"/>
     @RenderSection("Scripts", required: false)
 </body>
 </html>
