--- a/ShopDienTu.WebApp/Views/Product/Detail.cshtml
+++ b/ShopDienTu.WebApp/Views/Product/Detail.cshtml
@@ -7,7 +7,7 @@
 @inject LazZiya.ExpressLocalization.ISharedCultureLocalizer _loc;
 
 <ul class="breadcrumb">
-    <li><a href="/">Home</a> <span class="divider">/</span></li>
+    <li><a href="/@culture">Home</a> <span class="divider">/</span></li>
     <li class="active">@Model.Product.Name</li>
 </ul>
 <div class="row">
@@ -15,7 +15,7 @@
         <a href="@Model.Product.ThumbnailImage" title="@Model.Product.Name">
             <img src="@Model.Product.ThumbnailImage" style="width:100%" alt="Fujifilm FinePix S2950 Digital Camera" />
         </a>
-        <div class="btn-toolbar">
+        @*<div class="btn-toolbar">
             <div class="btn-group">
                 <span class="btn"><i class="icon-envelope"></i></span>
                 <span class="btn"><i class="icon-print"></i></span>
@@ -24,7 +24,7 @@
                 <span class="btn"><i class=" icon-thumbs-up"></i></span>
                 <span class="btn"><i class="icon-thumbs-down"></i></span>
             </div>
-        </div>
+        </div>*@
     </div>
     <div class="span6">
         <h3>@Model.Product.Name  </h3>
@@ -46,9 +46,9 @@
         <p>
             @Model.Product.Details
         </p>
-        <a class="btn btn-small pull-right" href="#detail">More Details</a>
+        @*<a class="btn btn-small pull-right" href="#detail">More Details</a>
         <br class="clr" />
-        <a href="#" name="detail"></a>
+        <a href="#" name="detail"></a>*@
         <hr class="soft" />
     </div>
 
