--- a/ShopDienTu.WebApp/Views/Shared/_Layout.cshtml
+++ b/ShopDienTu.WebApp/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    var culture = CultureInfo.CurrentCulture.Name;
+    var culture = CultureInfo.CurrentCulture;
 }
 <!DOCTYPE html>
 <html lang="en">
@@ -64,11 +64,8 @@
                     <span class="icon-bar"></span>
                 </a>
                 <div class="navbar-inner">
-                    <a class="brand" href="/"><img src="/app/themes/images/logo.png" alt="Bootsshop" /></a>
-                    <form class="form-inline navbar-search" method="post" action="products.html">
-                        <input id="srchFld" class="srchTxt" type="text" />
-                        <button type="submit" id="submitButton" class="btn btn-primary">Go</button>
-                    </form>
+                    <a class="brand" href="/@culture"><img src="/app/themes/images/logo.png" alt="Bootsshop" /></a>
+
                     <ul id="topMenu" class="nav pull-right">
                         <li class=""><a asp-route-culture="@culture" localize-content>Specials Offer</a></li>
                         <li class=""><a asp-route-culture="@culture" localize-content>Delivery</a></li>
@@ -148,11 +145,12 @@
         </div><!-- Container End -->
     </div>
     <!-- Placed at the end of the document so the pages load faster ============================================= -->
-    <script src="/app/themes/js/jquery.js" type="text/javascript"></script>
+    <script src="/app/jquery/jquery.min.js" type="text/javascript"></script>
     <script src="/app/themes/js/bootstrap.min.js" type="text/javascript"></script>
     <script src="/app/themes/js/google-code-prettify/prettify.js"></script>
     <script src="/app/themes/js/bootshop.js"></script>
     <script src="/app/themes/js/jquery.lightbox-0.5.js"></script>
+    <partial name="_ValidationScriptsPartial" />
     <script src="/js/toastr.min.js"></script>
     <script src="/js/configToastr.js"></script>
     <script src="/js/site.js"></script>
